[gd_scene load_steps=47 format=3 uid="uid://wgw3kec478c0"]

[ext_resource type="Script" path="res://scripts/entities/player.gd" id="1_u7vg0"]
[ext_resource type="SpriteFrames" uid="uid://ceaufvo80rkao" path="res://sprite_frames/entities/active/player/player.tres" id="2_5kk5a"]
[ext_resource type="AudioStream" uid="uid://c2iagj2vjwp5c" path="res://audio/sfx/placeholder/step.wav" id="3_rplgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w78b8"]
size = Vector2(3.00001, 11)

[sub_resource type="Animation" id="Animation_62lsp"]
resource_name = "idle_back"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j1d7s"]
resource_name = "idle_back_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8y8iu"]
resource_name = "idle_back_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dcvyw"]
resource_name = "idle_forward"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ka3px"]
resource_name = "idle_forward_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3do5l"]
resource_name = "idle_forward_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f0luc"]
resource_name = "idle_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yo3si"]
resource_name = "idle_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a03w7"]
resource_name = "walk_back"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_0thmn"]
resource_name = "walk_back_left"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 3, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gqlui"]
resource_name = "walk_back_right"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 3, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qybu6"]
resource_name = "walk_forward"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_sipta"]
resource_name = "walk_forward_left"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6umof"]
resource_name = "walk_forward_right"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a23pu"]
resource_name = "walk_left"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 10, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uiowj"]
resource_name = "walk_right"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 10, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gdjih"]
_data = {
"idle_back": SubResource("Animation_62lsp"),
"idle_back_left": SubResource("Animation_j1d7s"),
"idle_back_right": SubResource("Animation_8y8iu"),
"idle_forward": SubResource("Animation_dcvyw"),
"idle_forward_left": SubResource("Animation_ka3px"),
"idle_forward_right": SubResource("Animation_3do5l"),
"idle_left": SubResource("Animation_f0luc"),
"idle_right": SubResource("Animation_yo3si"),
"walk_back": SubResource("Animation_a03w7"),
"walk_back_left": SubResource("Animation_0thmn"),
"walk_back_right": SubResource("Animation_gqlui"),
"walk_forward": SubResource("Animation_qybu6"),
"walk_forward_left": SubResource("Animation_sipta"),
"walk_forward_right": SubResource("Animation_6umof"),
"walk_left": SubResource("Animation_a23pu"),
"walk_right": SubResource("Animation_uiowj")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ogstx"]
animation = &"idle_back_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ycn7h"]
animation = &"idle_back_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rq8e0"]
animation = &"idle_forward_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jvfa6"]
animation = &"idle_forward_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tsosl"]
animation = &"idle_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tbbtt"]
animation = &"idle_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y325v"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0o0oe"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_c6dns"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ogstx")
blend_point_0/pos = Vector2(-1, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ycn7h")
blend_point_1/pos = Vector2(1, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_rq8e0")
blend_point_2/pos = Vector2(1, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_jvfa6")
blend_point_3/pos = Vector2(-1, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_tsosl")
blend_point_4/pos = Vector2(0, -1)
blend_point_5/node = SubResource("AnimationNodeAnimation_tbbtt")
blend_point_5/pos = Vector2(0, 1)
blend_point_6/node = SubResource("AnimationNodeAnimation_y325v")
blend_point_6/pos = Vector2(-1, 0)
blend_point_7/node = SubResource("AnimationNodeAnimation_0o0oe")
blend_point_7/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xlekw"]
animation = &"walk_back_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3e2ep"]
animation = &"walk_back_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7eiu7"]
animation = &"walk_forward_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nti1u"]
animation = &"walk_forward_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0n7c4"]
animation = &"walk_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x1jip"]
animation = &"walk_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w6vo1"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_usve5"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_tq7be"]
blend_point_0/node = SubResource("AnimationNodeAnimation_xlekw")
blend_point_0/pos = Vector2(-1, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_3e2ep")
blend_point_1/pos = Vector2(1, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_7eiu7")
blend_point_2/pos = Vector2(1, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_nti1u")
blend_point_3/pos = Vector2(-1, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_0n7c4")
blend_point_4/pos = Vector2(0, 1)
blend_point_5/node = SubResource("AnimationNodeAnimation_x1jip")
blend_point_5/pos = Vector2(0, -1)
blend_point_6/node = SubResource("AnimationNodeAnimation_w6vo1")
blend_point_6/pos = Vector2(-1, 0)
blend_point_7/node = SubResource("AnimationNodeAnimation_usve5")
blend_point_7/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_53h4g"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_feo1f"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u5yg4"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_maww6"]
states/idle/node = SubResource("AnimationNodeBlendSpace2D_c6dns")
states/idle/position = Vector2(375, 100)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_tq7be")
states/walk/position = Vector2(511, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_53h4g"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_feo1f"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_u5yg4")]

[sub_resource type="Animation" id="Animation_vtrxi"]
resource_name = "idle"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioHolder/Step:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jjkre"]
resource_name = "walk"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioHolder/Step:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xcidu"]
_data = {
"idle": SubResource("Animation_vtrxi"),
"walk": SubResource("Animation_jjkre")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
visibility_layer = 2
collision_layer = 3
script = ExtResource("1_u7vg0")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = ExtResource("2_5kk5a")
frame = 6

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 11)
rotation = 1.5708
shape = SubResource("RectangleShape2D_w78b8")

[node name="animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gdjih")
}

[node name="tree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gdjih")
}
tree_root = SubResource("AnimationNodeStateMachine_maww6")
anim_player = NodePath("../animations")
parameters/idle/blend_position = Vector2(-0.0832, 0.262222)
parameters/walk/blend_position = Vector2(-0.00959998, 0.582222)

[node name="animator_audio" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xcidu")
}

[node name="AudioHolder" type="Node2D" parent="."]

[node name="Step" type="AudioStreamPlayer" parent="AudioHolder"]
stream = ExtResource("3_rplgy")
volume_db = -5.0

[node name="InteractRayCast" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, 32)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
drag_horizontal_enabled = true
drag_vertical_enabled = true
